--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
-    "start": "deno run --watch --allow-all main.ts"
-  }
+    "start": "deno run --watch --allow-all --unstable-cron main.ts"
+  },
+  "unstable": ["cron"]
 }
