--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
   "tasks": {
-    "start": "deno run --watch --allow-all --unstable-cron main.ts"
+    "start": "deno run --watch --allow-all --unstable-cron main.ts",
+    "gen-post-proto": "deno run --allow-read https://deno.land/x/grpc_basic@0.4.7/gen/dts.ts ./protos/social_media.proto > ./types/social_media.d.ts",
+    "gen-key-proto": "deno run --allow-read https://deno.land/x/grpc_basic@0.4.7/gen/dts.ts ./protos/keyword.proto > ./types/keyword.d.ts"
   },
   "unstable": ["cron"],
   "test": {
