build: add no-boolean-literal-for-arguments
*This rule enforces that all boolean parameters need to use “self-documenting” constants

--- a/deno.json
+++ b/deno.json
@@ -27,7 +27,7 @@
 		"exclude": ["./idea", "./vscode", "./dataset", "./ml-100k", "./python", "./temp"],
 		"rules": {
 			"tags": ["recommended"],
-			"include": ["ban-untagged-todo", "no-unused-vars"],
+			"include": ["ban-untagged-todo", "no-unused-vars", "no-boolean-literal-for-arguments"],
 			"exclude": []
 		}
 	},
